# PhotoBatch

./: .gitignore  ArgumentParser.cpp  ArgumentParser.hpp  CMakeLists.txt  PhotoBatch.cpp  Utils.cpp  Utils.hpp
Unittests/: CMakeLists.txt  TestArgumentParser.cpp  TestSum.cpp
